fixed header on safari and changed heights of some sections

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,16 +11,14 @@ main {
     background-color: $gunmetal;
     display: flex;
     justify-content: space-between;
-    padding: 2rem 1rem 1rem;
+     padding: 1rem;
     position: fixed;
     top: -100px;
     width: 100vw;
-    transition: top 0.7s;
-    z-index: 10;
-
-    @include media-breakpoint-up(md) {
-      padding: 1rem;
+    @supports (transition: initial) {
+      transition: top 0.7s ease-in-out;
     }
+    z-index: 10;
 
     &.down {
       top: 0;
