--- a/src/app/shared/components/hobbies/hobbies.component.scss
+++ b/src/app/shared/components/hobbies/hobbies.component.scss
@@ -6,7 +6,7 @@
 section {
   background-color: $maize;
   padding-bottom: 1rem;
-  height: 100vh;
+  height: auto;
 
   @include media-breakpoint-up(md) {
     height: 95vh;
