--- a/src/app/shared/components/tech-stack/tech-stack.component.scss
+++ b/src/app/shared/components/tech-stack/tech-stack.component.scss
@@ -8,10 +8,11 @@ section {
   // justify-content: space-between;
   flex-direction: column;
   background-color: $mint;
-  height: 95vh;
+  height: auto;
 
   @include media-breakpoint-up(md) {
-    height: 100vh;
+    // height: 100vh;
+    height: 95vh;
   }
 
   >header {
